--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -9,6 +9,7 @@ server.modules = (
 
 server.document-root        = "/var/www"
 server.upload-dirs          = ( "/var/cache/lighttpd/uploads" )
+accesslog.filename          = "/var/log/lighttpd/access.log" 
 server.errorlog             = "/var/log/lighttpd/error.log"
 server.pid-file             = "/var/run/lighttpd.pid"
 server.username             = "www-data"
